# StellarGrant-fe

./: package.json
api/: package-lock.json  package.json
client/: package-lock.json  (+1 more)
stellargrant-contracts/contracts/stellar-grants/: Cargo.toml  EVENTS.md  UPGRADE_GUIDE.md
stellargrant-contracts/contracts/stellar-grants/src/: events.rs  lib.rs  scratch.rs  storage.rs  test.rs  types.rs
stellargrant-contracts/contracts/stellar-grants/test_snapshots/: test_delegate_update_and_revocation_work_for_same_grant.1.json  test_delegated_vote_uses_reviewer_slot_for_double_vote_protection.1.json  test_delegatee_vote_counts_for_reviewer_and_emits_event.1.json  test_dispute_and_resolve_flow.1.json  test_dispute_fee_deducted_from_caller.1.json  test_dispute_fee_refunded_when_upheld.1.json  test_dispute_fee_sent_to_treasury_when_dismissed.1.json  test_event_emission_on_grant_create_and_fund.1.json  test_event_emission_on_milestone_vote.1.json  test_milestone_double_voting_panics.1.json  test_milestone_vote_after_quorum_panics.1.json  test_milestone_voting_quorum_and_events.1.json  test_only_council_can_resolve_dispute.1.json  test_reputation_idempotent_per_milestone.1.json  test_reputation_increases_after_milestone_approve.1.json  test_reputation_skipped_gracefully_without_profile.1.json  test_vote_blocked_during_dispute.1.json  test_zero_fee_dispute_requires_no_transfer.1.json
stellargrant-contracts/contracts/stellar-grants/tests/: test_delegate_voting.rs  test_event_emission.rs  test_milestone_dispute.rs  test_milestone_quorum.rs  test_reputation_and_dispute_fee.rs
(+206 files in other folders)
